--- a/export/linear-algebra.ipynb
+++ b/export/linear-algebra.ipynb
@@ -213,6 +213,171 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
+      ],
+      "metadata": {
+        "id": "cmPrtk8nJYjg"
+      },
+      "id": "cmPrtk8nJYjg",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mat_a = np.array([[1,2],\n",
+        "                  [4,5]])\n",
+        "print(mat_a)\n",
+        "# Broadcast para la dición de un escalar\n",
+        "print(mat_a + 1)"
+      ],
+      "metadata": {
+        "id": "45907RdIJk34",
+        "outputId": "807802fd-3b05-4cd0-c9ae-50ae12b7781a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "45907RdIJk34",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [4 5]]\n",
+            "[[2 3]\n",
+            " [5 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Broadcast para la multiplicaicón con un escalar\n",
+        "print(mat_a * 2)"
+      ],
+      "metadata": {
+        "id": "aJ3cCaUEKPW_",
+        "outputId": "75efff50-b05e-4477-a93f-82823eb5e4d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "aJ3cCaUEKPW_",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2  4]\n",
+            " [ 8 10]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mat_b = np.array([[0,0],\n",
+        "                  [0,1]])\n",
+        "print(mat_b)"
+      ],
+      "metadata": {
+        "id": "Dnwa0nO_KdPb",
+        "outputId": "58d93566-a7b8-43fd-8658-a027226f4f94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Dnwa0nO_KdPb",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 0]\n",
+            " [0 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mat_a + mat_b"
+      ],
+      "metadata": {
+        "id": "rqWY8ETpKu0Q",
+        "outputId": "cc56a82b-96d6-4c91-f129-63b0c408685d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "rqWY8ETpKu0Q",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [4, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mat_a)\n",
+        "# Transpuesta\n",
+        "mat_a.T"
+      ],
+      "metadata": {
+        "id": "hsTHrwywK99s",
+        "outputId": "0bbd95f0-bd4f-4af4-b1d7-a3d0e120883b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "hsTHrwywK99s",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [4 5]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 4],\n",
+              "       [2, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "550ba0bb",
       "metadata": {
