--- a/export/linear-algebra.ipynb
+++ b/export/linear-algebra.ipynb
@@ -237,11 +237,11 @@
         "print(mat_a + 1)"
       ],
       "metadata": {
-        "id": "45907RdIJk34",
-        "outputId": "807802fd-3b05-4cd0-c9ae-50ae12b7781a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "45907RdIJk34",
+        "outputId": "807802fd-3b05-4cd0-c9ae-50ae12b7781a"
       },
       "id": "45907RdIJk34",
       "execution_count": 4,
@@ -265,11 +265,11 @@
         "print(mat_a * 2)"
       ],
       "metadata": {
-        "id": "aJ3cCaUEKPW_",
-        "outputId": "75efff50-b05e-4477-a93f-82823eb5e4d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aJ3cCaUEKPW_",
+        "outputId": "75efff50-b05e-4477-a93f-82823eb5e4d1"
       },
       "id": "aJ3cCaUEKPW_",
       "execution_count": 5,
@@ -292,11 +292,11 @@
         "print(mat_b)"
       ],
       "metadata": {
-        "id": "Dnwa0nO_KdPb",
-        "outputId": "58d93566-a7b8-43fd-8658-a027226f4f94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dnwa0nO_KdPb",
+        "outputId": "58d93566-a7b8-43fd-8658-a027226f4f94"
       },
       "id": "Dnwa0nO_KdPb",
       "execution_count": 7,
@@ -317,11 +317,11 @@
         "mat_a + mat_b"
       ],
       "metadata": {
-        "id": "rqWY8ETpKu0Q",
-        "outputId": "cc56a82b-96d6-4c91-f129-63b0c408685d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rqWY8ETpKu0Q",
+        "outputId": "cc56a82b-96d6-4c91-f129-63b0c408685d"
       },
       "id": "rqWY8ETpKu0Q",
       "execution_count": 8,
@@ -347,11 +347,11 @@
         "mat_a.T"
       ],
       "metadata": {
-        "id": "hsTHrwywK99s",
-        "outputId": "0bbd95f0-bd4f-4af4-b1d7-a3d0e120883b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hsTHrwywK99s",
+        "outputId": "0bbd95f0-bd4f-4af4-b1d7-a3d0e120883b"
       },
       "id": "hsTHrwywK99s",
       "execution_count": 9,
@@ -374,6 +374,40 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mat_c = np.array([[1,2,3],\n",
+        "                  [4,5,6],\n",
+        "                  [7,8,9]])\n",
+        "print(mat_c)\n",
+        "#transpuesta\n",
+        "print(mat_c.T)"
+      ],
+      "metadata": {
+        "id": "2DSx8deRLfDG",
+        "outputId": "b7645548-fda2-41da-a708-af08120af9ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "2DSx8deRLfDG",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n",
+            "[[1 4 7]\n",
+            " [2 5 8]\n",
+            " [3 6 9]]\n"
+          ]
         }
       ]
     },
